# gifty-telegram-bot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
routers/: __init__.py  giftcard.py  payment.py
schemas/: giftcard.py  payment.py
utils/: telegram.py
